# QR-Redirect

./: .gitattributes  .gitlab-ci.yml  Cargo.toml  Dockerfile  config.toml  docker-compose.yml  readme.md
src/: api.rs  auth.rs  config.rs  main.rs
web/: configure.html  script.js  style.css  style.css.map  style.scss
