[package]
name = "qr_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"]}
async-trait = "0.1.77"
base64 = "0.21.7"
sha2 = "0.11.0-pre.2"
hex = "0.4.3"
serde = { version = "1.0.195", features = ["default", "derive"] }
toml = "0.8.8"